# jira-mcp-for-dev

./: Cargo.toml  README.md  justfile
resources/: create-jira-subtasks.md
src/: cli.rs  jira.rs  main.rs
src/jira/: create_subtask.rs  fetch_issue.rs  key.rs  mod.rs  model.rs  update_issue_description.rs  update_subtask_description.rs
